# TinyJson

./: .clang-format  CMakeLists.txt  LICENSE  README.md  build.sh  test.c  tinyjson.c  tinyjson.h
